@@ -794,6 +794,24 @@ name|DFS_DATANODE_SYNC_BEHIND_WRITES_DEFAULT
 init|=
 literal|false
 decl_stmt|;
+DECL|field|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_KEY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_KEY
+init|=
+literal|"dfs.datanode.sync.behind.writes.in.background"
+decl_stmt|;
+DECL|field|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|boolean
+name|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_DEFAULT
+init|=
+literal|false
+decl_stmt|;
 DECL|field|DFS_DATANODE_DROP_CACHE_BEHIND_READS_KEY
 specifier|public
 specifier|static
