@@ -759,6 +759,11 @@ specifier|private
 name|boolean
 name|syncBehindWrites
 decl_stmt|;
+DECL|field|syncBehindWritesInBackground
+specifier|private
+name|boolean
+name|syncBehindWritesInBackground
+decl_stmt|;
 comment|/** The client name.  It is empty if a datanode is the client */
 DECL|field|clientname
 specifier|private
@@ -1323,6 +1328,17 @@ name|getDnConf
 argument_list|()
 operator|.
 name|syncBehindWrites
+expr_stmt|;
+name|this
+operator|.
+name|syncBehindWritesInBackground
+operator|=
+name|datanode
+operator|.
+name|getDnConf
+argument_list|()
+operator|.
+name|syncBehindWritesInBackground
 expr_stmt|;
 specifier|final
 name|boolean
@@ -3396,6 +3412,40 @@ condition|(
 name|syncBehindWrites
 condition|)
 block|{
+if|if
+condition|(
+name|syncBehindWritesInBackground
+condition|)
+block|{
+name|this
+operator|.
+name|datanode
+operator|.
+name|getFSDataset
+argument_list|()
+operator|.
+name|submitBackgroundSyncFileRangeRequest
+argument_list|(
+name|block
+argument_list|,
+name|outFd
+argument_list|,
+name|lastCacheManagementOffset
+argument_list|,
+name|offsetInBlock
+operator|-
+name|lastCacheManagementOffset
+argument_list|,
+name|NativeIO
+operator|.
+name|POSIX
+operator|.
+name|SYNC_FILE_RANGE_WRITE
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|NativeIO
 operator|.
 name|POSIX
@@ -3417,6 +3467,7 @@ operator|.
 name|SYNC_FILE_RANGE_WRITE
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 comment|//
 comment|// For POSIX_FADV_DONTNEED, we want to drop from the beginning
