@@ -606,6 +606,11 @@ specifier|final
 name|boolean
 name|syncBehindWrites
 decl_stmt|;
+DECL|field|syncBehindWritesInBackground
+specifier|final
+name|boolean
+name|syncBehindWritesInBackground
+decl_stmt|;
 DECL|field|dropCacheBehindReads
 specifier|final
 name|boolean
@@ -821,6 +826,21 @@ argument_list|,
 name|DFSConfigKeys
 operator|.
 name|DFS_DATANODE_SYNC_BEHIND_WRITES_DEFAULT
+argument_list|)
+expr_stmt|;
+name|syncBehindWritesInBackground
+operator|=
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_KEY
+argument_list|,
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_SYNC_BEHIND_WRITES_IN_BACKGROUND_DEFAULT
 argument_list|)
 expr_stmt|;
 name|dropCacheBehindReads
