@@ -38,6 +38,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -1189,6 +1199,33 @@ name|trashEnabled
 parameter_list|(
 name|String
 name|bpid
+parameter_list|)
+function_decl|;
+comment|/**    * submit a sync_file_range request to AsyncDiskService    */
+DECL|method|submitBackgroundSyncFileRangeRequest (final ExtendedBlock block, final FileDescriptor fd, final long offset, final long nbytes, final int flags)
+specifier|public
+name|void
+name|submitBackgroundSyncFileRangeRequest
+parameter_list|(
+specifier|final
+name|ExtendedBlock
+name|block
+parameter_list|,
+specifier|final
+name|FileDescriptor
+name|fd
+parameter_list|,
+specifier|final
+name|long
+name|offset
+parameter_list|,
+specifier|final
+name|long
+name|nbytes
+parameter_list|,
+specifier|final
+name|int
+name|flags
 parameter_list|)
 function_decl|;
 block|}
