@@ -38,6 +38,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|FileDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|HashMap
@@ -182,8 +192,40 @@ name|BlockCommand
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|nativeio
+operator|.
+name|NativeIO
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|nativeio
+operator|.
+name|NativeIOException
+import|;
+end_import
+
 begin_comment
-comment|/**  * This class is a container of multiple thread pools, each for a volume,  * so that we can schedule async disk operations easily.  *   * Examples of async disk operations are deletion of block files.  * We don't want to create a new thread for each of the deletion request, and  * we don't want to do all deletions in the heartbeat thread since deletion  * can be slow, and we don't want to use a single thread pool because that  * is inefficient when we have more than 1 volume.  AsyncDiskService is the  * solution for these.  *   * This class and {@link org.apache.hadoop.util.AsyncDiskService} are similar.  * They should be combined.  */
+comment|/**  * This class is a container of multiple thread pools, each for a volume,  * so that we can schedule async disk operations easily.  *   * Examples of async disk operations are deletion of block files.  * We don't want to create a new thread for each of the deletion request, and  * we don't want to do all deletions in the heartbeat thread since deletion  * can be slow, and we don't want to use a single thread pool because that  * is inefficient when we have more than 1 volume.  AsyncDiskService is the  * solution for these.  * Another example of async disk operation is requesting sync_file_range().  *   * This class and {@link org.apache.hadoop.util.AsyncDiskService} are similar.  * They should be combined.  */
 end_comment
 
 begin_class
@@ -612,6 +654,88 @@ literal|"All async disk service threads have been shut down"
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|submitSyncFileRangeRequest (FsVolumeImpl volume, final FileDescriptor fd, final long offset, final long nbytes, final int flags)
+specifier|public
+name|void
+name|submitSyncFileRangeRequest
+parameter_list|(
+name|FsVolumeImpl
+name|volume
+parameter_list|,
+specifier|final
+name|FileDescriptor
+name|fd
+parameter_list|,
+specifier|final
+name|long
+name|offset
+parameter_list|,
+specifier|final
+name|long
+name|nbytes
+parameter_list|,
+specifier|final
+name|int
+name|flags
+parameter_list|)
+block|{
+name|execute
+argument_list|(
+name|volume
+operator|.
+name|getCurrentDir
+argument_list|()
+argument_list|,
+operator|new
+name|Runnable
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|NativeIO
+operator|.
+name|POSIX
+operator|.
+name|syncFileRangeIfPossible
+argument_list|(
+name|fd
+argument_list|,
+name|offset
+argument_list|,
+name|nbytes
+argument_list|,
+name|flags
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NativeIOException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"sync_file_range error"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+argument_list|)
+expr_stmt|;
 block|}
 comment|/**    * Delete the block file and meta file from the disk asynchronously, adjust    * dfsUsed statistics accordingly.    */
 DECL|method|deleteAsync (FsVolumeImpl volume, File blockFile, File metaFile, ExtendedBlock block, String trashDirectory)
