@@ -9711,6 +9711,55 @@ name|prefix
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|submitBackgroundSyncFileRangeRequest (ExtendedBlock block, FileDescriptor fd, long offset, long nbytes, int flags)
+specifier|public
+name|void
+name|submitBackgroundSyncFileRangeRequest
+parameter_list|(
+name|ExtendedBlock
+name|block
+parameter_list|,
+name|FileDescriptor
+name|fd
+parameter_list|,
+name|long
+name|offset
+parameter_list|,
+name|long
+name|nbytes
+parameter_list|,
+name|int
+name|flags
+parameter_list|)
+block|{
+name|FsVolumeImpl
+name|fsVolumeImpl
+init|=
+name|this
+operator|.
+name|getVolume
+argument_list|(
+name|block
+argument_list|)
+decl_stmt|;
+name|asyncDiskService
+operator|.
+name|submitSyncFileRangeRequest
+argument_list|(
+name|fsVolumeImpl
+argument_list|,
+name|fd
+argument_list|,
+name|offset
+argument_list|,
+name|nbytes
+argument_list|,
+name|flags
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
