@@ -36,6 +36,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileDescriptor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -5371,6 +5381,35 @@ name|getVolume
 parameter_list|(
 name|ExtendedBlock
 name|b
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|()
+throw|;
+block|}
+annotation|@
+name|Override
+DECL|method|submitBackgroundSyncFileRangeRequest (ExtendedBlock block, FileDescriptor fd, long offset, long nbytes, int flags)
+specifier|public
+name|void
+name|submitBackgroundSyncFileRangeRequest
+parameter_list|(
+name|ExtendedBlock
+name|block
+parameter_list|,
+name|FileDescriptor
+name|fd
+parameter_list|,
+name|long
+name|offset
+parameter_list|,
+name|long
+name|nbytes
+parameter_list|,
+name|int
+name|flags
 parameter_list|)
 block|{
 throw|throw
